* Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.1
- Removed EL6 support
- Removed OBE doc directory

* Fri Jan 03 2020 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.5.0-0
- Allow all log size configuration parameters to be specified in bytes,
  kilobytes, megabytes, or gigabytes.
- Fixed a bug in which the size parameter in the global logrotate configuration
  file was specified more than once.
- Added ability to specify maxsize configuration for specific log rotate rules.

* Thu Dec 19 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.5.0-0
- Add EL8 support

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.4.0-0
- Add v2 compliance_markup data

* Mon Mar 11 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.3.1-0
- Updated a URL in the README.md

* Thu Nov 01 2018 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.3.0-0
- static asset updates for puppet 5

* Mon Oct 01 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.3.0-0
- Added OEL and Puppet 5 support
- Add some previously impossible to configure options
  - the hourly rotate period
  - dateyesterday
  - shred and shredcycles
  - su and su_user and su_group (inapplicable on EL6)
- Added Logrotate::Periods type alias which allows hourly rotation

* Mon Jul 02 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.0-0
- Move SIMP-specific logrotate rules to a SIMP-managed configuration
  directory, /etc/logrotate.simp.d, and ensure logrotate processes
  that directory first. This ensures SIMP rules take priority, when
  duplicate rules are specified.

* Thu Nov 30 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.1.2-0
- Update README.md from puppet strings

* Fri Sep 01 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.1-0
- Updated the defaults  settings for compress, rotate and dateext in rule.pp
  to pull values from init.pp. (They were hard coded to them before)
- changed templates to add nodateext if dateext is set to false.
