@@ -1,3 +1,7 @@
+* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.6.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.1
 - Removed EL6 support
 - Removed OBE doc directory
